--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "concurrently": "^6.2.2",
     "gh-pages": "^3.2.3",
+    "overmind": "^28.0.1",
+    "overmind-devtools": "^29.0.1",
+    "overmind-react": "^29.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
@@ -18,7 +22,7 @@
     "xlsx": "^0.17.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"overmind-devtools\" \"react-scripts start\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
