--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "clone": "^2.1.2",
     "concurrently": "^6.2.2",
     "gh-pages": "^3.2.3",
     "overmind": "^28.0.1",
